--- a/airflow-data/airflow.cfg
+++ b/airflow-data/airflow.cfg
@@ -1,7 +1,7 @@
 [core]
 # The folder where your airflow pipelines live, most likely a
 # subfolder in a code repository. This path must be absolute.
-dags_folder = /opt/airflow/dags
+dags_folder = /opt/airflow/work/dags
 
 # Hostname by providing a path to a callable, which will resolve the hostname.
 # The format is "package.function".
@@ -21,12 +21,12 @@ default_timezone = utc
 # ``SequentialExecutor``, ``LocalExecutor``, ``CeleryExecutor``, ``DaskExecutor``,
 # ``KubernetesExecutor``, ``CeleryKubernetesExecutor`` or the
 # full import path to the class when using a custom executor.
-executor = SequentialExecutor
+executor = LocalExecutor
 
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
 # their website
-sql_alchemy_conn = sqlite:////opt/airflow/airflow.db
+sql_alchemy_conn = postgresql+psycopg2://airflow_user:password@postgres/airflow
 
 # The encoding for the databases
 sql_engine_encoding = utf-8
